log
Mon 06 May 2024 06:58:42 PM UTC: 
 tests:  1|8
total_score: 0/70
ef11c73
Mon 06 May 2024 07:04:21 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
a3e5128
Mon 06 May 2024 07:04:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ac033c5
Mon 06 May 2024 07:16:53 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode *aux = createTreeNode(key, value);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
9b09c5e
Mon 06 May 2024 07:18:17 PM UTC: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode *aux = createTreeNode(key, value);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
ff62165
Mon 06 May 2024 07:18:29 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
dcd2eed
Mon 06 May 2024 07:21:25 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: variable ‘y’ set but not used [-Werror=unused-but-set-variable]
   59 |   TreeNode *y = NULL;
      |             ^
treemap.c:53:13: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode *aux = createTreeNode(key, value);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
423e9c0
Mon 06 May 2024 07:21:33 PM UTC: 
 treemap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:13: error: variable ‘y’ set but not used [-Werror=unused-but-set-variable]
   54 |   TreeNode *y = NULL;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
796ace9
Mon 06 May 2024 07:25:54 PM UTC: 
 treemap.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
50770fb
Mon 06 May 2024 07:36:45 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
719ad80
Mon 06 May 2024 07:38:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a2f189c
Mon 06 May 2024 07:39:07 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
2d28857
Mon 06 May 2024 07:39:21 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
19e575f
Mon 06 May 2024 07:41:01 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|6
total_score: 5/70
ff3aaeb
Mon 06 May 2024 07:42:26 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
b0fe7c3
Wed 08 May 2024 04:33:06 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
3b90a88
Wed 08 May 2024 04:33:38 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
894caf9
Wed 08 May 2024 04:34:59 AM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:98:30: error: expected expression before ‘<’ token
   98 |     else if (aux->pair->key =< key) {
      |                              ^
Compilation failed
ab6b254
Wed 08 May 2024 05:01:38 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
179dcc2
Wed 08 May 2024 05:02:10 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
abfe8a8
Wed 08 May 2024 05:33:41 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|6
total_score: 5/70
eaf24dd
Wed 08 May 2024 05:33:55 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
d8cc29d
